noinst_LIBRARIES = libcore.a
libcore_a_SOURCES = \
	apu.c \
	apu.h \
	build.h \
	cheat.c \
	cheat.h \
	clock.h \
	cmd_line.c \
	cmd_line.h \
	common.h \
	conf.h \
	cpu.c \
	cpu.h \
	cpu_inline.h \
	database.h \
	emu.c \
	emu.h \
	external_calls.c \
	external_calls.h \
	fds.c \
	fds.h \
	font.h \
	fps.c \
	fps.h \
	gfx_functions_inline.h \
	gfx.h \
	gui.h \
	ines.c \
	ines.h \
	info.h \
	input.c \
	input.h \
	irqA12.c \
	irqA12.h \
	irql2f.c \
	irql2f.h \
	main.h \
	mappers.c \
	mappers.h \
	mem_map.h \
	miniz.h \
	overscan.c \
	overscan.h \
	paldef.h \
	palette.h \
	ppu.c \
	ppu.h \
	ppu_inline.h \
	recent_roms.c \
	recent_roms.h \
	save_slot.c \
	save_slot.h \
	sha1.c \
	sha1.h \
	snd.h \
	tas.c \
	tas.h \
	text.c \
	text.h \
	timeline.c \
	timeline.h \
	uncompress.c \
	uncompress.h \
	uncompress_selection.h \
	unif.c \
	unif.h \
	version.h\
	vs_system.h

libcore_a_SOURCES += \
	mappers/mapper_0.c \
	mappers/mapper_0.h \
	mappers/mapper_105.c \
	mappers/mapper_105.h \
	mappers/mapper_114.c \
	mappers/mapper_114.h \
	mappers/mapper_116.c \
	mappers/mapper_116.h \
	mappers/mapper_120.c \
	mappers/mapper_120.h \
	mappers/mapper_121.c \
	mappers/mapper_121.h \
	mappers/mapper_134.c \
	mappers/mapper_134.h \
	mappers/mapper_156.c \
	mappers/mapper_156.h \
	mappers/mapper_163.c \
	mappers/mapper_163.h \
	mappers/mapper_164.c \
	mappers/mapper_164.h \
	mappers/mapper_176.c \
	mappers/mapper_176.h \
	mappers/mapper_178.c \
	mappers/mapper_178.h \
	mappers/mapper_182.c \
	mappers/mapper_182.h \
	mappers/mapper_183.c \
	mappers/mapper_183.h \
	mappers/mapper_186.c \
	mappers/mapper_186.h \
	mappers/mapper_187.c \
	mappers/mapper_187.h \
	mappers/mapper_200.c \
	mappers/mapper_200.h \
	mappers/mapper_201.c \
	mappers/mapper_201.h \
	mappers/mapper_202.c \
	mappers/mapper_202.h \
	mappers/mapper_203.c \
	mappers/mapper_203.h \
	mappers/mapper_204.c \
	mappers/mapper_204.h \
	mappers/mapper_205.c \
	mappers/mapper_205.h \
	mappers/mapper_208.c \
	mappers/mapper_208.h \
	mappers/mapper_212.c \
	mappers/mapper_212.h \
	mappers/mapper_213.c \
	mappers/mapper_213.h \
	mappers/mapper_214.c \
	mappers/mapper_214.h \
	mappers/mapper_215.c \
	mappers/mapper_215.h \
	mappers/mapper_217.c \
	mappers/mapper_217.h \
	mappers/mapper_219.c \
	mappers/mapper_219.h \
	mappers/mapper_221.c \
	mappers/mapper_221.h \
	mappers/mapper_222.c \
	mappers/mapper_222.h \
	mappers/mapper_225.c \
	mappers/mapper_225.h \
	mappers/mapper_226.c \
	mappers/mapper_226.h \
	mappers/mapper_227.c \
	mappers/mapper_227.h \
	mappers/mapper_229.c \
	mappers/mapper_229.h \
	mappers/mapper_230.c \
	mappers/mapper_230.h \
	mappers/mapper_231.c \
	mappers/mapper_231.h \
	mappers/mapper_233.c \
	mappers/mapper_233.h \
	mappers/mapper_235.c \
	mappers/mapper_235.h \
	mappers/mapper_240.c \
	mappers/mapper_240.h \
	mappers/mapper_241.c \
	mappers/mapper_241.h \
	mappers/mapper_242.c \
	mappers/mapper_242.h \
	mappers/mapper_244.c \
	mappers/mapper_244.h \
	mappers/mapper_246.c \
	mappers/mapper_246.h \
	mappers/mapper_249.c \
	mappers/mapper_249.h \
	mappers/mapper_28.c \
	mappers/mapper_28.h \
	mappers/mapper_31.c \
	mappers/mapper_31.h \
	mappers/mapper_37.c \
	mappers/mapper_37.h \
	mappers/mapper_40.c \
	mappers/mapper_40.h \
	mappers/mapper_42.c \
	mappers/mapper_42.h \
	mappers/mapper_43.c \
	mappers/mapper_43.h \
	mappers/mapper_44.c \
	mappers/mapper_44.h \
	mappers/mapper_45.c \
	mappers/mapper_45.h \
	mappers/mapper_46.c \
	mappers/mapper_46.h \
	mappers/mapper_47.c \
	mappers/mapper_47.h \
	mappers/mapper_49.c \
	mappers/mapper_49.h \
	mappers/mapper_50.c \
	mappers/mapper_50.h \
	mappers/mapper_51.c \
	mappers/mapper_51.h \
	mappers/mapper_52.c \
	mappers/mapper_52.h \
	mappers/mapper_53.c \
	mappers/mapper_53.h \
	mappers/mapper_57.c \
	mappers/mapper_57.h \
	mappers/mapper_58.c \
	mappers/mapper_58.h \
	mappers/mapper_60.c \
	mappers/mapper_60.h \
	mappers/mapper_61.c \
	mappers/mapper_61.h \
	mappers/mapper_62.c \
	mappers/mapper_62.h \
	mappers/mapper_74x138x161.c \
	mappers/mapper_74x138x161.h \
	mappers/mapper_74x161x161x32.c \
	mappers/mapper_74x161x161x32.h \
	mappers/mapper_83.c \
	mappers/mapper_83.h \
	mappers/mapper_90_209_211.c \
	mappers/mapper_90_209_211.h \
	mappers/mapper_91.c \
	mappers/mapper_91.h \
	mappers/mapper_A65AS.c \
	mappers/mapper_A65AS.h \
	mappers/mapper_AC08.c \
	mappers/mapper_AC08.h \
	mappers/mapper_Active.c \
	mappers/mapper_Active.h \
	mappers/mapper_Agci.c \
	mappers/mapper_Agci.h \
	mappers/mapper_Ave.c \
	mappers/mapper_Ave.h \
	mappers/mapper_AxROM.c \
	mappers/mapper_AxROM.h \
	mappers/mapper_Bandai.c \
	mappers/mapper_Bandai.h \
	mappers/mapper_BB.c \
	mappers/mapper_BB.h \
	mappers/mapper_BMC11160.c \
	mappers/mapper_BMC11160.h \
	mappers/mapper_BMC12IN1.c \
	mappers/mapper_BMC12IN1.h \
	mappers/mapper_BMC411120C.c \
	mappers/mapper_BMC411120C.h \
	mappers/mapper_BMC70IN1.c \
	mappers/mapper_BMC70IN1.h \
	mappers/mapper_BMC830118C.c \
	mappers/mapper_BMC830118C.h \
	mappers/mapper_BMCFK23C.c \
	mappers/mapper_BMCFK23C.h \
	mappers/mapper_BMCG146.c \
	mappers/mapper_BMCG146.h \
	mappers/mapper_BMCGhostbusters63in1.c \
	mappers/mapper_BMCGhostbusters63in1.h \
	mappers/mapper_BMC64IN1NOREPEAT.c \
	mappers/mapper_BMC64IN1NOREPEAT.h \
	mappers/mapper_BMCNTD03.c \
	mappers/mapper_BMCNTD03.h \
	mappers/mapper_BS5.c \
	mappers/mapper_BS5.h \
	mappers/mapper_BxROM.c \
	mappers/mapper_BxROM.h \
	mappers/mapper_Caltron.c \
	mappers/mapper_Caltron.h \
	mappers/mapper_Camerica.c \
	mappers/mapper_Camerica.h \
	mappers/mapper_CC_21.c \
	mappers/mapper_CC_21.h \
	mappers/mapper_CITYFIGHT.c \
	mappers/mapper_CITYFIGHT.h \
	mappers/mapper_CNROM.c \
	mappers/mapper_CNROM.h \
	mappers/mapper_ColorDreams.c \
	mappers/mapper_ColorDreams.h \
	mappers/mapper_CPROM.c \
	mappers/mapper_CPROM.h \
	mappers/mapper_EH8813A.c \
	mappers/mapper_EH8813A.h \
	mappers/mapper_FDS.c \
	mappers/mapper_FDS.h \
	mappers/mapper_Futuremedia.c \
	mappers/mapper_Futuremedia.h \
	mappers/mapper_FS304.c \
	mappers/mapper_FS304.h \
	mappers/mapper_GameGenie.c \
	mappers/mapper_GameGenie.h \
	mappers/mapper_GxROM.c \
	mappers/mapper_GxROM.h \
	mappers/mapper_H2288.c \
	mappers/mapper_H2288.h \
	mappers/mapper_Hen.c \
	mappers/mapper_Hen.h \
	mappers/mapper_Hes.c \
	mappers/mapper_Hes.h \
	mappers/mapper_Irem.c \
	mappers/mapper_Irem.h \
	mappers/mapper_Jaleco.c \
	mappers/mapper_Jaleco.h \
	mappers/mapper_Kaiser.c \
	mappers/mapper_Kaiser.h \
	mappers/mapper_Kasing.c \
	mappers/mapper_Kasing.h \
	mappers/mapper_KOF97.c \
	mappers/mapper_KOF97.h \
	mappers/mapper_KS7013B.c \
	mappers/mapper_KS7013B.h \
	mappers/mapper_LH32.c \
	mappers/mapper_LH32.h \
	mappers/mapper_Magic.c \
	mappers/mapper_Magic.h \
	mappers/mapper_Malee.c \
	mappers/mapper_Malee.h \
	mappers/mapper_MMC1.c \
	mappers/mapper_MMC1.h \
	mappers/mapper_MMC2andMMC4.c \
	mappers/mapper_MMC2andMMC4.h \
	mappers/mapper_MMC3.c \
	mappers/mapper_MMC3.h \
	mappers/mapper_MMC5.c \
	mappers/mapper_MMC5.h \
	mappers/mapper_MTECH01.c \
	mappers/mapper_MTECH01.h \
	mappers/mapper_Namco.c \
	mappers/mapper_Namco.h \
	mappers/mapper_NovelDiamond.c \
	mappers/mapper_NovelDiamond.h \
	mappers/mapper_Ntdec.c \
	mappers/mapper_Ntdec.h \
	mappers/mapper_Rcm.c \
	mappers/mapper_Rcm.h \
	mappers/mapper_Rex.c \
	mappers/mapper_Rex.h \
	mappers/mapper_SA_9602B.c \
	mappers/mapper_SA_9602B.h \
	mappers/mapper_Sachen.c \
	mappers/mapper_Sachen.h \
	mappers/mapper_SHERO.c \
	mappers/mapper_SHERO.h \
	mappers/mapper_SL1632.c \
	mappers/mapper_SL1632.h \
	mappers/mapper_Sunsoft.c \
	mappers/mapper_Sunsoft.h \
	mappers/mapper_T262.c \
	mappers/mapper_T262.h \
	mappers/mapper_Taito.c \
	mappers/mapper_Taito.h \
	mappers/mapper_Tengen.c \
	mappers/mapper_Tengen.h \
	mappers/mapper_TF1201.c \
	mappers/mapper_TF1201.h \
	mappers/mapper_Txc.c \
	mappers/mapper_Txc.h \
	mappers/mapper_TxROM.c \
	mappers/mapper_TxROM.h \
	mappers/mapper_UNIF43272.c \
	mappers/mapper_UNIF43272.h \
	mappers/mapper_UNIF603_5052.c \
	mappers/mapper_UNIF603_5052.h \
	mappers/mapper_UNIF8157.c \
	mappers/mapper_UNIF8157.h \
	mappers/mapper_UNIF8237.c \
	mappers/mapper_UNIF8237.h \
	mappers/mapper_UNIFSMB2J.c \
	mappers/mapper_UNIFSMB2J.h \
	mappers/mapper_UxROM.c \
	mappers/mapper_UxROM.h \
	mappers/mapper_VRC1.c \
	mappers/mapper_VRC1.h \
	mappers/mapper_VRC2.c \
	mappers/mapper_VRC2.h \
	mappers/mapper_VRC3.c \
	mappers/mapper_VRC3.h \
	mappers/mapper_VRC4.c \
	mappers/mapper_VRC4.h \
	mappers/mapper_VRC6.c \
	mappers/mapper_VRC6.h \
	mappers/mapper_VRC7.c \
	mappers/mapper_VRC7.h \
	mappers/mapper_VRC7_snd.c \
	mappers/mapper_VRC7_snd.h \
	mappers/mapper_Vs.c \
	mappers/mapper_Vs.h \
	mappers/mapper_Waixing.c \
	mappers/mapper_Waixing.h \
	mappers/mapper_Whirlwind.c \
	mappers/mapper_Whirlwind.h \
	mappers/mapper_YOKO.c \
	mappers/mapper_YOKO.h
