noinst_LIBRARIES = libcore.a
libcore_a_SOURCES = \
	apu.c \
	apu.h \
	bck_states.c \
	bck_states.h \
	build.h \
	cheat.c \
	cheat.h \
	clock.h \
	common.h \
	compilation_unit_orphan.h \
	conf.h \
	cpu.c \
	cpu.h \
	cpu_inline.h \
	database.h \
	debugger.h \
	draw_on_screen.h \
	draw_on_screen.c \
	emu.c \
	emu.h \
	emu_thread.c \
	emu_thread.h \
	external_calls.c \
	external_calls.h \
	fds.c \
	fds.h \
	font.h \
	fps.c \
	fps.h \
	gui.h \
	ines.c \
	ines.h \
	info.h \
	input.c \
	input.h \
	irqA12.c \
	irqA12.h \
	irql2f.c \
	irql2f.h \
	jstick.h \
	jstick.c \
	main.h \
	mappers.c \
	mappers.h \
	mem_map.h \
	miniz.h \
	nsf.c \
	nsf.h \
	nsfe.c \
	nsfe.h \
	overscan.c \
	overscan.h \
	patcher.c \
	patcher.h \
	patcher_xdelta3_wrap.c \
	patcher_xdelta3_wrap.h \
	paldef.h \
	palette.h \
	ppu.c \
	ppu.h \
	ppu_inline.h \
	rewind.c \
	rewind.h \
	rom_mem.c \
	rom_mem.h \
	save_slot.c \
	save_slot.h \
	sha1.c \
	sha1.h \
	thread_def.h \
	uncompress.c \
	uncompress.h \
	uncompress_selection.h \
	unif.c \
	unif.h \
	version.h \
	vs_system.h

if WITH_FFMPEG
libcore_a_SOURCES += \
	recording.c \
	recording.h
endif

libcore_a_SOURCES += \
	input/arkanoid.h \
	input/arkanoid.c \
	input/famicom.h \
	input/famicom.c \
	input/four_score.h \
	input/four_score.c \
	input/mouse.h \
	input/nes_001.h \
	input/nes_001.c \
	input/nsf_controller.h \
	input/nsf_controller.c \
	input/nsf_mouse.h \
	input/nsf_mouse.c \
	input/oeka_kids_tablet.h \
	input/oeka_kids_tablet.c \
	input/snes_mouse.h \
	input/snes_mouse.c \
	input/standard_controller.h \
	input/standard_controller.c \
	input/vs.h \
	input/vs.c \
	input/zapper.h \
	input/zapper.c

libcore_a_SOURCES += \
	../extra/kiss_fft130/kiss_fft.c \
	../extra/kiss_fft130/_kiss_fft_guts.h \
	../extra/kiss_fft130/kiss_fft.h

libcore_a_SOURCES += \
	mappers/mapper_0.c \
	mappers/mapper_0.h \
	mappers/mapper_1024CA1.c \
	mappers/mapper_1024CA1.h \
	mappers/mapper_101.c \
	mappers/mapper_101.h \
	mappers/mapper_103.c \
	mappers/mapper_103.h \
	mappers/mapper_105.c \
	mappers/mapper_105.h \
	mappers/mapper_106.c \
	mappers/mapper_106.h \
	mappers/mapper_114.c \
	mappers/mapper_114.h \
	mappers/mapper_116.c \
	mappers/mapper_116.h \
	mappers/mapper_120.c \
	mappers/mapper_120.h \
	mappers/mapper_121.c \
	mappers/mapper_121.h \
	mappers/mapper_126.c \
	mappers/mapper_126.h \
	mappers/mapper_134.c \
	mappers/mapper_134.h \
	mappers/mapper_156.c \
	mappers/mapper_156.h \
	mappers/mapper_163.c \
	mappers/mapper_163.h \
	mappers/mapper_164.c \
	mappers/mapper_164.h \
	mappers/mapper_166.c \
	mappers/mapper_166.h \
	mappers/mapper_167.c \
	mappers/mapper_167.h \
	mappers/mapper_168.c \
	mappers/mapper_168.h \
	mappers/mapper_176.c \
	mappers/mapper_176.h \
	mappers/mapper_178.c \
	mappers/mapper_178.h \
	mappers/mapper_182.c \
	mappers/mapper_182.h \
	mappers/mapper_183.c \
	mappers/mapper_183.h \
	mappers/mapper_185.c \
	mappers/mapper_185.h \
	mappers/mapper_186.c \
	mappers/mapper_186.h \
	mappers/mapper_187.c \
	mappers/mapper_187.h \
	mappers/mapper_188.c \
	mappers/mapper_188.h \
	mappers/mapper_190.c \
	mappers/mapper_190.h \
	mappers/mapper_196.c \
	mappers/mapper_196.h \
	mappers/mapper_197.c \
	mappers/mapper_197.h \
	mappers/mapper_198.c \
	mappers/mapper_198.h \
	mappers/mapper_200.c \
	mappers/mapper_200.h \
	mappers/mapper_201.c \
	mappers/mapper_201.h \
	mappers/mapper_202.c \
	mappers/mapper_202.h \
	mappers/mapper_203.c \
	mappers/mapper_203.h \
	mappers/mapper_204.c \
	mappers/mapper_204.h \
	mappers/mapper_205.c \
	mappers/mapper_205.h \
	mappers/mapper_208.c \
	mappers/mapper_208.h \
	mappers/mapper_212.c \
	mappers/mapper_212.h \
	mappers/mapper_213.c \
	mappers/mapper_213.h \
	mappers/mapper_214.c \
	mappers/mapper_214.h \
	mappers/mapper_217.c \
	mappers/mapper_217.h \
	mappers/mapper_218.c \
	mappers/mapper_218.h \
	mappers/mapper_219.c \
	mappers/mapper_219.h \
	mappers/mapper_22026.c \
	mappers/mapper_22026.h \
	mappers/mapper_221.c \
	mappers/mapper_221.h \
	mappers/mapper_222.c \
	mappers/mapper_222.h \
	mappers/mapper_225.c \
	mappers/mapper_225.h \
	mappers/mapper_226.c \
	mappers/mapper_226.h \
	mappers/mapper_227.c \
	mappers/mapper_227.h \
	mappers/mapper_229.c \
	mappers/mapper_229.h \
	mappers/mapper_230.c \
	mappers/mapper_230.h \
	mappers/mapper_231.c \
	mappers/mapper_231.h \
	mappers/mapper_235.c \
	mappers/mapper_235.h \
	mappers/mapper_237.c \
	mappers/mapper_237.h \
	mappers/mapper_240.c \
	mappers/mapper_240.h \
	mappers/mapper_241.c \
	mappers/mapper_241.h \
	mappers/mapper_242.c \
	mappers/mapper_242.h \
	mappers/mapper_244.c \
	mappers/mapper_244.h \
	mappers/mapper_246.c \
	mappers/mapper_246.h \
	mappers/mapper_249.c \
	mappers/mapper_249.h \
	mappers/mapper_250.c \
	mappers/mapper_250.h \
	mappers/mapper_252.c \
	mappers/mapper_252.h \
	mappers/mapper_253.c \
	mappers/mapper_253.h \
	mappers/mapper_254.c \
	mappers/mapper_254.h \
	mappers/mapper_267.c \
	mappers/mapper_267.h \
	mappers/mapper_269.c \
	mappers/mapper_269.h \
	mappers/mapper_28.c \
	mappers/mapper_28.h \
	mappers/mapper_288.c \
	mappers/mapper_288.h \
	mappers/mapper_297.c \
	mappers/mapper_297.h \
	mappers/mapper_31.c \
	mappers/mapper_31.h \
	mappers/mapper_353.c \
	mappers/mapper_353.h \
	mappers/mapper_356.c \
	mappers/mapper_356.h \
	mappers/mapper_357.c \
	mappers/mapper_357.h \
	mappers/mapper_359.c \
	mappers/mapper_359.h \
	mappers/mapper_36.c \
	mappers/mapper_36.h \
	mappers/mapper_360.c \
	mappers/mapper_360.h \
	mappers/mapper_361.c \
	mappers/mapper_361.h \
	mappers/mapper_37.c \
	mappers/mapper_37.h \
	mappers/mapper_372.c \
	mappers/mapper_372.h \
	mappers/mapper_374.c \
	mappers/mapper_374.h \
	mappers/mapper_375.c \
	mappers/mapper_375.h \
	mappers/mapper_377.c \
	mappers/mapper_377.h \
	mappers/mapper_380.c \
	mappers/mapper_380.h \
	mappers/mapper_381.c \
	mappers/mapper_381.h \
	mappers/mapper_382.c \
	mappers/mapper_382.h \
	mappers/mapper_389.c \
	mappers/mapper_389.h \
	mappers/mapper_393.c \
	mappers/mapper_393.h \
	mappers/mapper_394.c \
	mappers/mapper_394.h \
	mappers/mapper_396.c \
	mappers/mapper_396.h \
	mappers/mapper_398.c \
	mappers/mapper_398.h \
	mappers/mapper_399.c \
	mappers/mapper_399.h \
	mappers/mapper_400.c \
	mappers/mapper_400.h \
	mappers/mapper_401.c \
	mappers/mapper_401.h \
	mappers/mapper_403.c \
	mappers/mapper_403.h \
	mappers/mapper_404.c \
	mappers/mapper_404.h \
	mappers/mapper_406.c \
	mappers/mapper_406.h \
	mappers/mapper_409.c \
	mappers/mapper_409.h \
	mappers/mapper_410.c \
	mappers/mapper_410.h \
	mappers/mapper_411.c \
	mappers/mapper_411.h \
	mappers/mapper_412.c \
	mappers/mapper_412.h \
	mappers/mapper_414.c \
	mappers/mapper_414.h \
	mappers/mapper_415.c \
	mappers/mapper_415.h \
	mappers/mapper_416.c \
	mappers/mapper_416.h \
	mappers/mapper_417.c \
	mappers/mapper_417.h \
	mappers/mapper_420.c \
	mappers/mapper_420.h \
	mappers/mapper_429.c \
	mappers/mapper_429.h \
	mappers/mapper_431.c \
	mappers/mapper_431.h \
	mappers/mapper_432.c \
	mappers/mapper_432.h \
	mappers/mapper_3DBLOCK.c \
	mappers/mapper_3DBLOCK.h \
	mappers/mapper_40.c \
	mappers/mapper_40.h \
	mappers/mapper_413.c \
	mappers/mapper_413.h \
	mappers/mapper_42.c \
	mappers/mapper_42.h \
	mappers/mapper_428.c \
	mappers/mapper_428.h \
	mappers/mapper_43.c \
	mappers/mapper_43.h \
	mappers/mapper_44.c \
	mappers/mapper_44.h \
	mappers/mapper_45.c \
	mappers/mapper_45.h \
	mappers/mapper_46.c \
	mappers/mapper_46.h \
	mappers/mapper_47.c \
	mappers/mapper_47.h \
	mappers/mapper_49.c \
	mappers/mapper_49.h \
	mappers/mapper_50.c \
	mappers/mapper_50.h \
	mappers/mapper_51.c \
	mappers/mapper_51.h \
	mappers/mapper_512.c \
	mappers/mapper_512.h \
	mappers/mapper_52.c \
	mappers/mapper_52.h \
	mappers/mapper_53.c \
	mappers/mapper_53.h \
	mappers/mapper_541.c \
	mappers/mapper_541.h \
	mappers/mapper_57.c \
	mappers/mapper_57.h \
	mappers/mapper_58.c \
	mappers/mapper_58.h \
	mappers/mapper_59.c \
	mappers/mapper_59.h \
	mappers/mapper_60.c \
	mappers/mapper_60.h \
	mappers/mapper_60311C.c \
	mappers/mapper_60311C.h \
	mappers/mapper_61.c \
	mappers/mapper_61.h \
	mappers/mapper_62.c \
	mappers/mapper_62.h \
	mappers/mapper_63.c \
	mappers/mapper_63.h \
	mappers/mapper_74x138x161.c \
	mappers/mapper_74x138x161.h \
	mappers/mapper_74x161x161x32.c \
	mappers/mapper_74x161x161x32.h \
	mappers/mapper_8_IN_1.c \
	mappers/mapper_8_IN_1.h \
	mappers/mapper_80013B.c \
	mappers/mapper_80013B.h \
	mappers/mapper_83.c \
	mappers/mapper_83.h \
	mappers/mapper_831128C.c \
	mappers/mapper_831128C.h \
	mappers/mapper_891227.c \
	mappers/mapper_891227.h \
	mappers/mapper_JYASIC.c \
	mappers/mapper_JYASIC.h \
	mappers/mapper_91.c \
	mappers/mapper_91.h \
	mappers/mapper_A65AS.c \
	mappers/mapper_A65AS.h \
	mappers/mapper_AC08.c \
	mappers/mapper_AC08.h \
	mappers/mapper_Active.c \
	mappers/mapper_Active.h \
	mappers/mapper_Agci.c \
	mappers/mapper_Agci.h \
	mappers/mapper_Ave.c \
	mappers/mapper_Ave.h \
	mappers/mapper_AX40G.c \
	mappers/mapper_AX40G.h \
	mappers/mapper_AX5705.c \
	mappers/mapper_AX5705.h \
	mappers/mapper_AxROM.c \
	mappers/mapper_AxROM.h \
	mappers/mapper_Bandai.c \
	mappers/mapper_Bandai.h \
	mappers/mapper_BJ56.c \
	mappers/mapper_BJ56.h \
	mappers/mapper_BMC11160.c \
	mappers/mapper_BMC11160.h \
	mappers/mapper_BMC12IN1.c \
	mappers/mapper_BMC12IN1.h \
	mappers/mapper_BMC190IN1.c \
	mappers/mapper_BMC190IN1.h \
	mappers/mapper_BMC411120C.c \
	mappers/mapper_BMC411120C.h \
	mappers/mapper_BMC70IN1.c \
	mappers/mapper_BMC70IN1.h \
	mappers/mapper_BMC830118C.c \
	mappers/mapper_BMC830118C.h \
	mappers/mapper_BMC830134C.c \
	mappers/mapper_BMC830134C.h \
	mappers/mapper_BMC830425C.c \
	mappers/mapper_BMC830425C.h \
	mappers/mapper_BMCFK23C.c \
	mappers/mapper_BMCFK23C.h \
	mappers/mapper_BMCG146.c \
	mappers/mapper_BMCG146.h \
	mappers/mapper_BMCGhostbusters63in1.c \
	mappers/mapper_BMCGhostbusters63in1.h \
	mappers/mapper_BMCHP898F.c \
	mappers/mapper_BMCHP898F.h \
	mappers/mapper_BMC64IN1NOREPEAT.c \
	mappers/mapper_BMC64IN1NOREPEAT.h \
	mappers/mapper_BMC810544CA1.c \
	mappers/mapper_BMC810544CA1.h \
	mappers/mapper_BMCNTD03.c \
	mappers/mapper_BMCNTD03.h \
	mappers/mapper_BOY.c \
	mappers/mapper_BOY.h \
	mappers/mapper_BS5.c \
	mappers/mapper_BS5.h \
	mappers/mapper_BTL900218.c \
	mappers/mapper_BTL900218.h \
	mappers/mapper_BxROM.c \
	mappers/mapper_BxROM.h \
	mappers/mapper_Caltron.c \
	mappers/mapper_Caltron.h \
	mappers/mapper_Camerica.c \
	mappers/mapper_Camerica.h \
	mappers/mapper_CC_21.c \
	mappers/mapper_CC_21.h \
	mappers/mapper_CHEAPOCABRA.c \
	mappers/mapper_CHEAPOCABRA.h \
	mappers/mapper_CITYFIGHT.c \
	mappers/mapper_CITYFIGHT.h \
	mappers/mapper_CNROM.c \
	mappers/mapper_CNROM.h \
	mappers/mapper_ColorDreams.c \
	mappers/mapper_ColorDreams.h \
	mappers/mapper_Coolboy.c \
	mappers/mapper_Coolboy.h \
	mappers/mapper_Coolgirl.c \
	mappers/mapper_Coolgirl.h \
	mappers/mapper_CPROM.c \
	mappers/mapper_CPROM.h \
	mappers/mapper_CTC09.c \
	mappers/mapper_CTC09.h \
	mappers/mapper_CTC12IN1.c \
	mappers/mapper_CTC12IN1.h \
	mappers/mapper_DRAGONFIGHTER.c \
	mappers/mapper_DRAGONFIGHTER.h \
	mappers/mapper_DREAMTECH01.c \
	mappers/mapper_DREAMTECH01.h \
	mappers/mapper_DRIPGAME.c \
	mappers/mapper_DRIPGAME.h \
	mappers/mapper_EDU2000.c \
	mappers/mapper_EDU2000.h \
	mappers/mapper_EH8813A.c \
	mappers/mapper_EH8813A.h \
	mappers/mapper_F15.c \
	mappers/mapper_F15.h \
	mappers/mapper_FARIDSLROM8IN1.c \
	mappers/mapper_FARIDSLROM8IN1.h \
	mappers/mapper_FARIDUNROM8IN1.c \
	mappers/mapper_FARIDUNROM8IN1.h \
	mappers/mapper_FDS.c \
	mappers/mapper_FDS.h \
	mappers/mapper_Futuremedia.c \
	mappers/mapper_Futuremedia.h \
	mappers/mapper_FS304.c \
	mappers/mapper_FS304.h \
	mappers/mapper_GameGenie.c \
	mappers/mapper_GameGenie.h \
	mappers/mapper_GN26.c \
	mappers/mapper_GN26.h \
	mappers/mapper_GxROM.c \
	mappers/mapper_GxROM.h \
	mappers/mapper_GS_20xx.c \
	mappers/mapper_GS_20xx.h \
	mappers/mapper_H2288.c \
	mappers/mapper_H2288.h \
	mappers/mapper_Hen.c \
	mappers/mapper_Hen.h \
	mappers/mapper_Hes.c \
	mappers/mapper_Hes.h \
	mappers/mapper_HP2018A.c \
	mappers/mapper_HP2018A.h \
	mappers/mapper_Irem.c \
	mappers/mapper_Irem.h \
	mappers/mapper_Jaleco.c \
	mappers/mapper_Jaleco.h \
	mappers/mapper_K3006.c \
	mappers/mapper_K3006.h \
	mappers/mapper_K3033.c \
	mappers/mapper_K3033.h \
	mappers/mapper_K3036.c \
	mappers/mapper_K3036.h \
	mappers/mapper_K3046.c \
	mappers/mapper_K3046.h \
	mappers/mapper_K3071.c \
	mappers/mapper_K3071.h \
	mappers/mapper_Kaiser.c \
	mappers/mapper_Kaiser.h \
	mappers/mapper_Kasing.c \
	mappers/mapper_Kasing.h \
	mappers/mapper_KOF97.c \
	mappers/mapper_KOF97.h \
	mappers/mapper_KONAMIQTAI.c \
	mappers/mapper_KONAMIQTAI.h \
	mappers/mapper_KS106C.c \
	mappers/mapper_KS106C.h \
	mappers/mapper_KS7012.c \
	mappers/mapper_KS7012.h \
	mappers/mapper_KS7013B.c \
	mappers/mapper_KS7013B.h \
	mappers/mapper_KS7016.c \
	mappers/mapper_KS7016.h \
	mappers/mapper_KS7017.c \
	mappers/mapper_KS7017.h \
	mappers/mapper_KS7021A.c \
	mappers/mapper_KS7021A.h \
	mappers/mapper_KS7030.c \
	mappers/mapper_KS7030.h \
	mappers/mapper_KS7031.c \
	mappers/mapper_KS7031.h \
	mappers/mapper_KS7032.c \
	mappers/mapper_KS7032.h \
	mappers/mapper_KS7037.c \
	mappers/mapper_KS7037.h \
	mappers/mapper_KS7057.c \
	mappers/mapper_KS7057.h \
	mappers/mapper_L6IN1.c \
	mappers/mapper_L6IN1.h \
	mappers/mapper_LH10.c \
	mappers/mapper_LH10.h \
	mappers/mapper_LH32.c \
	mappers/mapper_LH32.h \
	mappers/mapper_LH51.c \
	mappers/mapper_LH51.h \
	mappers/mapper_Magic.c \
	mappers/mapper_Magic.h \
	mappers/mapper_Malee.c \
	mappers/mapper_Malee.h \
	mappers/mapper_MALISB.c \
	mappers/mapper_MALISB.h \
	mappers/mapper_MMC1.c \
	mappers/mapper_MMC1.h \
	mappers/mapper_MMC2andMMC4.c \
	mappers/mapper_MMC2andMMC4.h \
	mappers/mapper_MMC3.c \
	mappers/mapper_MMC3.h \
	mappers/mapper_MMC5.c \
	mappers/mapper_MMC5.h \
	mappers/mapper_Namco.c \
	mappers/mapper_Namco.h \
	mappers/mapper_NSF.c \
	mappers/mapper_NSF.h \
	mappers/mapper_Ntdec.c \
	mappers/mapper_Ntdec.h \
	mappers/mapper_OneBus.c \
	mappers/mapper_OneBus.h \
	mappers/mapper_Rcm.c \
	mappers/mapper_Rcm.h \
	mappers/mapper_RESETNROMXIN1.c \
	mappers/mapper_RESETNROMXIN1.h \
	mappers/mapper_RESETTXROM.c \
	mappers/mapper_RESETTXROM.h \
	mappers/mapper_Rex.c \
	mappers/mapper_Rex.h \
	mappers/mapper_RT_01.c \
	mappers/mapper_RT_01.h \
	mappers/mapper_SA_9602B.c \
	mappers/mapper_SA_9602B.h \
	mappers/mapper_SA005A.c \
	mappers/mapper_SA005A.h \
	mappers/mapper_Sachen.c \
	mappers/mapper_Sachen.h \
	mappers/mapper_SC_127.c \
	mappers/mapper_SC_127.h \
	mappers/mapper_SHERO.c \
	mappers/mapper_SHERO.h \
	mappers/mapper_SL1632.c \
	mappers/mapper_SL1632.h \
	mappers/mapper_Sunsoft.c \
	mappers/mapper_Sunsoft.h \
	mappers/mapper_T262.c \
	mappers/mapper_T262.h \
	mappers/mapper_Taito.c \
	mappers/mapper_Taito.h \
	mappers/mapper_Tengen.c \
	mappers/mapper_Tengen.h \
	mappers/mapper_TF1201.c \
	mappers/mapper_TF1201.h \
	mappers/mapper_TH21311.c \
	mappers/mapper_TH21311.h \
	mappers/mapper_TJ03.c \
	mappers/mapper_TJ03.h \
	mappers/mapper_Txc.c \
	mappers/mapper_Txc.h \
	mappers/mapper_TxROM.c \
	mappers/mapper_TxROM.h \
	mappers/mapper_UNIF158B.c \
	mappers/mapper_UNIF158B.h \
	mappers/mapper_UNIF43272.c \
	mappers/mapper_UNIF43272.h \
	mappers/mapper_UNIF603_5052.c \
	mappers/mapper_UNIF603_5052.h \
	mappers/mapper_UNIF8157.c \
	mappers/mapper_UNIF8157.h \
	mappers/mapper_UNIF8237.c \
	mappers/mapper_UNIF8237.h \
	mappers/mapper_UNIFSMB2J.c \
	mappers/mapper_UNIFSMB2J.h \
	mappers/mapper_UxROM.c \
	mappers/mapper_UxROM.h \
	mappers/mapper_VRC1.c \
	mappers/mapper_VRC1.h \
	mappers/mapper_VRC2.c \
	mappers/mapper_VRC2.h \
	mappers/mapper_VRC3.c \
	mappers/mapper_VRC3.h \
	mappers/mapper_VRC4.c \
	mappers/mapper_VRC4.h \
	mappers/mapper_VRC6.c \
	mappers/mapper_VRC6.h \
	mappers/mapper_VRC7.c \
	mappers/mapper_VRC7.h \
	mappers/mapper_VRC7_snd.c \
	mappers/mapper_VRC7_snd.h \
	mappers/mapper_Vs.c \
	mappers/mapper_Vs.h \
	mappers/mapper_Waixing.c \
	mappers/mapper_Waixing.h \
	mappers/mapper_Whirlwind.c \
	mappers/mapper_Whirlwind.h \
	mappers/mapper_WS.c \
	mappers/mapper_WS.h \
	mappers/mapper_YOKO.c \
	mappers/mapper_YOKO.h \
	mappers/opll.c \
	mappers/opll.h \
	mappers/SST39SF040.c \
	mappers/SST39SF040.h

patcher_xdelta3_wrap.o: patcher_xdelta3_wrap.c patcher_xdelta3_wrap.h
	${CC} -w ${DEFS} ${DEFAULT_INCLUDES} ${CFLAGS} -c -o $@ $<